<project 
	xmlns="http://maven.apache.org/POM/4.0.0" 
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"	
  	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
  	>
  <modelVersion>4.0.0</modelVersion>

  <groupId>es.upm.tfo.lst</groupId>
  <artifactId>CodeGenerator</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>CodeGenerator</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
  

	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<version>4.12</version>
      		<scope>test</scope>
    	</dependency>
    
	<!-- https://mvnrepository.com/artifact/org.apache.velocity/velocity -->
	<dependency>
	    <groupId>org.apache.velocity</groupId>
	    <artifactId>velocity</artifactId>
	    <version>1.7</version>
	</dependency>

	<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
	<dependency>
	    <groupId>org.slf4j</groupId>
	    <artifactId>slf4j-api</artifactId>
	    <version>1.7.25</version>
	 </dependency>
	 
<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
		<dependency>
		    <groupId>org.jsoup</groupId>
		    <artifactId>jsoup</artifactId>
		    <version>1.5.2</version>
		</dependency>


	
	<!-- https://mvnrepository.com/artifact/log4j/log4j -->
	<dependency>
	    <groupId>log4j</groupId>
	    <artifactId>log4j</artifactId>
	    <version>1.2.17</version>
	</dependency>

	<dependency>
		<groupId>net.sourceforge.owlapi</groupId>
		<artifactId>owlapi-distribution</artifactId>
		<!-- <version>5.1.7  / 4.0.4</version> -->
		<!-- <version>5.1.5</version>  problems to load.  java.lang.ClassNotFoundException: gnu.trove.set.hash.THashSet -->
		<!-- <version>5.1.7</version> -->
		<version>4.5.6</version> <!-- 4.5.6 works ok, but couldnt load imported ontologies -->
	</dependency>

	
	
		<!-- https://mvnrepository.com/artifact/net.sourceforge.owlapi/jfact -->
	<dependency>
	    <groupId>net.sourceforge.owlapi</groupId>
	    <artifactId>jfact</artifactId>
	    <version>4.0.4</version>
	</dependency>
		
		
	
  </dependencies>
  
  
     <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
  
  
</project>
